--- a/exp/CMakeLists.txt
+++ b/exp/CMakeLists.txt
@@ -1,6 +1,11 @@
-cmake_minimum_required(VERSION 3.22)
+cmake_minimum_required(VERSION 3.17)
 project(exp)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(exp main.cpp graph.h)
+MATH(EXPR stack_size "102400000")
+set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")
+
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+add_executable(exp src/main.cpp)
