--- a/exp/CMakeLists.txt
+++ b/exp/CMakeLists.txt
@@ -8,4 +8,4 @@ set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-add_executable(exp src/main.cpp)
+add_executable(exp src/main.cpp include/simulation.h)
