--- a/exp/CMakeLists.txt
+++ b/exp/CMakeLists.txt
@@ -5,6 +5,7 @@ set(CMAKE_CXX_STANDARD 14)
 
 MATH(EXPR stack_size "102400000")
 set(CMAKE_EXE_LINKER_FLAGS "-Wl,--stack,${stack_size}")
+set(CMAKE_CXX_FLAGS "-O3")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
