--- a/exp/CMakeLists.txt
+++ b/exp/CMakeLists.txt
@@ -7,5 +7,5 @@ set(CMAKE_CXX_FLAGS "-O3")
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-#add_executable(exp src/main.cpp)
-add_executable(exp src/test.cpp)
+add_executable(exp src/main.cpp)
+#add_executable(exp src/test.cpp)
